<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="80dp"
    android:paddingLeft="80dp"
    android:background="@drawable/bg_login"
    tools:context=".LogoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/logo_img_login"
            android:layout_width="166dp"
            android:layout_height="106dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo_login"/>
        <Space
            android:id="@+id/space_login"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/logo_img_login"/>

        <LinearLayout
            android:id="@+id/id_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/space_login">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="7dp"
                android:background="@drawable/id_icon_login"/>
            <EditText
                android:id="@+id/id_edit_login"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/id_hint_login"
                android:textColorHint="#fff"
                android:textColor="#fff"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/id_line_login"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/id_layout_login"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="10dp"
            android:background="#fff"/>

        <LinearLayout
            android:id="@+id/pw_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_line_login">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="7dp"
                android:background="@drawable/pw_icon_login"/>
            <EditText
                android:id="@+id/pw_edit_login"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/pw_hint_login"
                android:textColorHint="#fff"
                android:textColor="#fff"
                android:background="@null"
                android:inputType="textPassword"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/pw_line_login"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/pw_layout_login"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="20dp"
            android:background="#fff"/>

        <com.andexert.library.RippleView
            android:id="@+id/btn_ripple_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/pw_line_login"
            rv_framerate="5"
            rv_centered="true">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login_btn_login"
                android:textColor="#fff"
                android:background="@drawable/bg_btn_login" />
        </com.andexert.library.RippleView>

        <TextView
            android:id="@+id/lose_btn_login"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/btn_ripple_login"
            android:layout_margin="7dp"
            android:text="@string/lose_btn_login"
            android:textColor="#fff"
            android:gravity="center"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/create_btn_login"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/create_btn_login"
        android:textColor="#fff"
        android:gravity="center"/>
</RelativeLayout>
